fix handleclick navbar and modals for collapse it is

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@ ion-icon{
   color: grey;
   font-size: 24px;
 }
+*{
+  scroll-behavior: smooth;
+}
 
 /* .rounded-t-lg{
   height: 25rem;
